gac_sb/objects/Facture__c.object
<CustomObject>
    <description>SF CONSULTING - permet de créer des factures</description>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Contrat__r.Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse__c</fullName>
        <label>Adresse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apporteur_d_affaire_comptabilise_paye__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apporteur d&apos;affaire comptabilisé/payé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_CA_Brut__c</fullName>
        <description>Brésil</description>
        <label>CA Brut</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BR_CA_Net__c</fullName>
        <formula>IF(BR_CA_Brut__c &gt;= 0,/*Cas facture, le CA Net correspond aux CA brut - les taxes */
	IF(YEAR(Date__c)&gt;= 2014, 
	   (BR_CA_Brut__c - ((BR_CA_Brut__c * 0.1425) + (BR_CA_Brut__c * Dobro_ISS__c))), 
	   (BR_CA_Brut__c - ((BR_CA_Brut__c * 0.0865) + (BR_CA_Brut__c * Dobro_ISS__c)))), 

/*Cas avoir, si la case recup taxe est cochée, on perd les taxes*/
IF(!BR_perte_taxe__c,

	IF(YEAR(Date__c)&gt;= 2014,
	   (BR_CA_Brut__c - ((BR_CA_Brut__c * 0.1425) + (BR_CA_Brut__c * Dobro_ISS__c))), 
	   (BR_CA_Brut__c - ((BR_CA_Brut__c * 0.0865) + (BR_CA_Brut__c * Dobro_ISS__c)))),
        IF(YEAR(Date__c)&gt;= 2014,
	    BR_CA_Brut__c - (BR_CA_Brut__c * Dobro_ISS__c),
            BR_CA_Brut__c - (BR_CA_Brut__c * Dobro_ISS__c))
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BR_CA_a_encaisser__c</fullName>
        <description>EDIT du 13/08/2015 : on enlève la condition sur les factures &lt; 5 000 qui n&apos;ont que de l&apos;IRPJ.
AVANT:
IF( BR_CA_Brut__c  &lt;= (10/0.015), BR_CA_Brut__c, IF(BR_CA_Brut__c &lt;= 5000,
((BR_CA_Brut__c - (( BR_CA_Brut__c * BR_IRPJ__c)+(BR_CA_Brut__c * Dobro_ISS__c)))),
(BR_CA_Brut__c - ((BR_CA_Brut__c * BR_PIS_COFINS__c) + (BR_CA_Brut__c * BR_IRPJ__c) + (BR_CA_Brut__c * BR_CSLL__c) + (BR_CA_Brut__c * Dobro_ISS__c)))))</description>
        <formula>IF( BR_CA_Brut__c  &lt;= (10/0.015), BR_CA_Brut__c, IF(BR_CA_Brut__c &lt;= 5000 &amp;&amp; Date__c &lt; DATE(2015,7,1),
((BR_CA_Brut__c - (( BR_CA_Brut__c * BR_IRPJ__c)+(BR_CA_Brut__c * Dobro_ISS__c)))),
(BR_CA_Brut__c - ((BR_CA_Brut__c * BR_PIS_COFINS__c) + (BR_CA_Brut__c * BR_IRPJ__c) + (BR_CA_Brut__c * BR_CSLL__c) + (BR_CA_Brut__c * Dobro_ISS__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA à encaisser</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BR_CSLL__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>Brésil</description>
        <label>CSLL</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BR_IRPJ__c</fullName>
        <defaultValue>0.015</defaultValue>
        <description>Brésil</description>
        <label>IRPJ</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BR_Montant_CSLL__c</fullName>
        <formula>BR_CA_Brut__c *  BR_CSLL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CSLL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BR_Montant_IRPJ__c</fullName>
        <formula>BR_CA_Brut__c *  BR_IRPJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant IRPJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BR_Montant_PIS_COFINS__c</fullName>
        <formula>BR_CA_Brut__c *  BR_PIS_COFINS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant PIS/COFINS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BR_PIS_COFINS__c</fullName>
        <defaultValue>0.0365</defaultValue>
        <description>Brésil</description>
        <label>PIS/COFINS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BR_perte_taxe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lorsque cette case est cochée sur un avoir, le CA NET peut être inférieur au CA NET de la facture: C&apos;est qu&apos;on a perdu les taxes associées a cette facture</description>
        <inlineHelpText>Cancelamento da fatura após do prazo autorizado</inlineHelpText>
        <label>Cancelamento da fatura após do prazo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boleto_emitido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boleto emitido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelamento_da_fatura_apos_do_prazo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cancelamento da fatura após do prazo autorizado</description>
        <label>Cancelamento da fatura após do prazo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaire_ceance_douteuse__c</fullName>
        <label>Commentaire créance douteuse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_recouvrement__c</fullName>
        <label>Commentaires recouvrement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Factures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_facturation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact facturation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Factures</relationshipLabel>
        <relationshipName>Factures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contrat</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Factures</relationshipLabel>
        <relationshipName>Factures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creance_douteuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Créance douteuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creance_irrecouvrable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Créance irrécouvrable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date de facture</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_cr_ance_irr_couvrable__c</fullName>
        <inlineHelpText>Indiquez la date à laquelle la créance passe en irrécouvrable</inlineHelpText>
        <label>Date créance irrécouvrable</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_derniere_relance__c</fullName>
        <description>Ce champ est mis à jour avec la date de la dernière modification de la tâche associée à la facture</description>
        <inlineHelpText>Ce champ est mis à jour avec la date de la dernière modification de la tâche associée à la facture</inlineHelpText>
        <label>Date de dernière relance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_dernier_avoir__c</fullName>
        <label>Date dernier avoir</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_dernier_encaissement__c</fullName>
        <label>Date dernier encaissement</label>
        <summarizedField>Encaissement__c.Date_encaissement__c</summarizedField>
        <summaryForeignKey>Encaissement__c.Facture__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_envoi__c</fullName>
        <label>Date d&apos;envoi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_facture_soldee__c</fullName>
        <formula>IF( Montant_creance_HT__c &lt; 1,
IF( ((Date_dernier_avoir__c &gt; Date_dernier_encaissement__c) &amp;&amp; (Date_dernier_encaissement__c &gt; Date_cr_ance_irr_couvrable__c )) || ((Date_dernier_avoir__c &gt; Date_cr_ance_irr_couvrable__c) &amp;&amp; (Date_cr_ance_irr_couvrable__c &gt; Date_dernier_encaissement__c )) || (!ISNULL( Date_dernier_avoir__c ) &amp;&amp; ISNULL( Date_dernier_encaissement__c ) &amp;&amp; ISNULL( Date_cr_ance_irr_couvrable__c )) ||  ((Date_dernier_avoir__c &gt; Date_dernier_encaissement__c) &amp;&amp; ISNULL( Date_cr_ance_irr_couvrable__c )), Date_dernier_avoir__c ,
IF(((Date_dernier_encaissement__c &gt; Date_dernier_avoir__c) &amp;&amp; (Date_dernier_encaissement__c &gt; Date_cr_ance_irr_couvrable__c)) || (!ISNULL(Date_dernier_encaissement__c) &amp;&amp; ISNULL( Date_dernier_avoir__c ) &amp;&amp; ISNULL( Date_cr_ance_irr_couvrable__c )),Date_dernier_encaissement__c ,
IF((ISNULL( Date_dernier_avoir__c )&amp;&amp; (Date_cr_ance_irr_couvrable__c &gt; Date_dernier_encaissement__c))|| (Date_cr_ance_irr_couvrable__c &gt; Date_dernier_avoir__c) &amp;&amp; (ISNULL(Date_dernier_encaissement__c)) || (Date_cr_ance_irr_couvrable__c &gt; Date_dernier_avoir__c) &amp;&amp; (Date_cr_ance_irr_couvrable__c &gt; Date_dernier_encaissement__c) || (ISNULL( Date_dernier_avoir__c ) &amp;&amp; ISNULL( Date_dernier_encaissement__c ) &amp;&amp; !ISNULL( Date_cr_ance_irr_couvrable__c )),Date_cr_ance_irr_couvrable__c,Date_dernier_encaissement__c))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date facture soldée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_prevision_soldee__c</fullName>
        <label>Date prévision soldée</label>
        <summarizedField>Prevision_encaissement__c.Date_prevue__c</summarizedField>
        <summaryForeignKey>Prevision_encaissement__c.Facture__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_validation__c</fullName>
        <label>Date validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delai_encaissement__c</fullName>
        <formula>Date_facture_soldee__c  -  Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Délai d&apos;encaissement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dobro_ISS__c</fullName>
        <label>Dobro ISS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Echeance__c</fullName>
        <label>Echéance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entite_GAC__c</fullName>
        <label>Entité GAC</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etat_creance__c</fullName>
        <description>Champ utile pour du reporting</description>
        <formula>CASE( Typologie_creance__c ,
&apos;A relancer&apos;,&apos;A relancer&apos;,
&apos;En cours de relance&apos;,&apos;En cours de relance&apos;,
&apos;Promesse client&apos;,&apos;Promesse client&apos;,
&apos;Blocage mission&apos;,TEXT(Precision_blocage_mission__c),
&apos;En procédure&apos;,&apos;En procédure&apos;,
&apos;Litige / Contentieux avocat&apos;,&apos;Litige / Contentieux avocat&apos;,&apos;#&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ce champ permet de consolider l&apos;information de plusieurs champ pour générer un reporting</inlineHelpText>
        <label>Etat créance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facture_liee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dans le cas des avoirs uniquements</description>
        <label>Facture liée</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Contrat__c</field>
                <operation>equals</operation>
                <valueField>Facture__c.Contrat__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Facture__c</referenceTo>
        <relationshipLabel>Avoirs</relationshipLabel>
        <relationshipName>Avoirs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fatura_do_Finder_recebida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comissão finder contabilizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Index_num_facture__c</fullName>
        <formula>VALUE( 

CASE(Account_Record_Type__c,
    &apos;SPAIN_ACCOUNT&apos;, LEFT(RIGHT(Name , 9), 4),
    &apos;SINGAPORE_ACCOUNT&apos;, IF(LEFT(Name , 3) == &apos;PIC&apos;, RIGHT(Name, 4), &apos;-1&apos;),
    &apos;CANADA_ACCOUNT&apos;, RIGHT(Name , 5),
    RIGHT(Name , 4)
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Index du numéro de facture</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Factures</relationshipLabel>
        <relationshipName>Factures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mode_de_paiement__c</fullName>
        <label>Mode de paiement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Montant_HT_Prestataire__c</fullName>
        <formula>(Prevision_HT_Prestataire__c + ( Montant_annule_par_avoir_HT__c  *  percent_Prestation__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant HT Prestataire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_HT__c</fullName>
        <description>(Facture)</description>
        <label>Montant HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_TPS__c</fullName>
        <formula>Montant_HT__c * TPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant TPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_TTC__c</fullName>
        <description>Facture</description>
        <formula>ROUND(Montant_HT__c +  Montant_TVA__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_TVA__c</fullName>
        <formula>Montant_HT__c *  Taux_TVA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant TVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_TVQ__c</fullName>
        <formula>Montant_HT__c * TVQ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant TVQ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_annule_par_avoir2_TTC__c</fullName>
        <label>Montant annulé par avoir TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_annule_par_avoir_HT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Montant annulé par avoir HT</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_creance_HT__c</fullName>
        <formula>IF(ISPICKVAL(Division, &quot;BRASIL&quot;),  Montant_creance_TTC__c ,
IF(( Montant_HT__c  -  Montant_encaisse_HT__c  +  Montant_annule_par_avoir_HT__c - Montant_perdu_HT__c ) &lt; 1, 0, (Montant_HT__c  -  Montant_encaisse_HT__c  +  Montant_annule_par_avoir_HT__c - Montant_perdu_HT__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant créance HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_creance_TTC__c</fullName>
        <formula>IF(NOT ISPICKVAL(Division,&apos;BRASIL&apos;),
(IF(( Montant_TTC__c - Montant_encaisse_TTC__c + v1_Montant_annule_par_avoir_TTC__c ) &lt; 0.1, 0, (Montant_TTC__c - Montant_encaisse_TTC__c + v1_Montant_annule_par_avoir_TTC__c ))),(IF(( BR_CA_a_encaisser__c - Montant_encaisse_TTC__c + v1_Montant_annule_par_avoir_TTC__c ) &lt; 0.1, 0, (BR_CA_a_encaisser__c - Montant_encaisse_TTC__c + v1_Montant_annule_par_avoir_TTC__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant créance TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_encaisse_HT__c</fullName>
        <formula>Montant_encaisse_TTC__c / (1 +  Taux_TVA__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant encaissé HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_encaisse_TTC__c</fullName>
        <label>Montant encaissé TTC</label>
        <summarizedField>Encaissement__c.Montant_TTC__c</summarizedField>
        <summaryForeignKey>Encaissement__c.Facture__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Montant_paye_au_client__c</fullName>
        <description>Montant déjà payé au client</description>
        <inlineHelpText>Renseigner le montant déjà payé au client</inlineHelpText>
        <label>Montant payé au client</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_perdu_HT__c</fullName>
        <formula>Montant_perdu__c /(1 + Taux_TVA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant perdu HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_perdu__c</fullName>
        <label>Montant perdu TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_potentiellement_encaissable_HT__c</fullName>
        <formula>Montant_potentiellement_encaissable__c  /  (1 + Taux_TVA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant potentiellement encaissable HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_potentiellement_encaissable__c</fullName>
        <formula>potentiellement_encaissable__c *   Montant_creance_TTC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant potentiellement encaissable TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_previsions_encaissement_TTC__c</fullName>
        <label>Montant prévisions encaissement TTC</label>
        <summarizedField>Prevision_encaissement__c.Montant_prevu_TTC__c</summarizedField>
        <summaryForeignKey>Prevision_encaissement__c.Facture__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Montant_provisionner_HT__c</fullName>
        <formula>provisionner__c  *  Montant_creance_HT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant à provisionner HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_provisionner__c</fullName>
        <formula>provisionner__c *  Montant_creance_TTC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant à provisionner TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montante_Dobro_ISS__c</fullName>
        <formula>(Dobro_ISS__c  *  BR_CA_Brut__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montante Dobro ISS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>N_client_modifie__c</fullName>
        <formula>IF(N_compte_client__c != Contrat__r.N_compte_client__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>N˚ client modifie</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_compte_client__c</fullName>
        <label>N° compte client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_de_facture_Unique__c</fullName>
        <description>Champ renseigné par workflow avec le n° de facture et une clause unique</description>
        <externalId>true</externalId>
        <inlineHelpText>Champ renseigné par workflow avec le n° de facture, uniquement si la facture est de type facture validé</inlineHelpText>
        <label>N° de facture unique</label>
        <length>35</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>N_r_f_rence_client__c</fullName>
        <label>N° référence client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_jours_depuis_echeance__c</fullName>
        <formula>TODAY() -  Echeance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nb jours depuis échéance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_jours_depuis_facturation__c</fullName>
        <formula>TODAY() -  Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nb jours depuis facturation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paiement_effectue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cocher la case lorsque le paiement a été effectué dans sa totalité</description>
        <inlineHelpText>Cocher la case lorsque le paiement a été effectué dans sa totalité</inlineHelpText>
        <label>Paiement effectué</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pole__c</fullName>
        <formula>CASE(Contrat__r.RecordType.DeveloperName, &apos;CIR&apos;,&apos;Inno&apos;,&apos;DI&apos;,&apos;Inno&apos;,&apos;FI&apos;,&apos;Inno&apos;,&apos;ACS&apos;,&apos;Perf RH&apos;,&apos;CRH&apos;,&apos;Perf RH&apos;,&apos;TAT&apos;,&apos;Perf RH&apos;,&apos;IL&apos;,&apos;Perf Financière&apos;,&apos;VEILLE&apos;,&apos;Inno&apos;,&apos;CIN&apos;,&apos;Inno&apos;,&apos;#&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pôle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pourcentage_facture__c</fullName>
        <label>Pourcentage facturé</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Precision_blocage_mission__c</fullName>
        <label>Précision blocage mission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attente remise du dossier</fullName>
                </value>
                <value>
                    <fullName>Attente remboursement CIR</fullName>
                </value>
                <value>
                    <fullName>Contrôle fiscal</fullName>
                </value>
                <value>
                    <fullName>Rapport d’audit non remis</fullName>
                </value>
                <value>
                    <fullName>En attente du remboursement URSSAF</fullName>
                </value>
                <value>
                    <fullName>Contestation URSSAF</fullName>
                </value>
                <value>
                    <fullName>Contrôle URSSAF</fullName>
                </value>
                <value>
                    <fullName>En attente de dégrèvement</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Vérification</fullName>
                </value>
                <value>
                    <fullName>Opposition</fullName>
                </value>
                <value>
                    <fullName>Litige</fullName>
                </value>
                <value>
                    <fullName>Faillite</fullName>
                </value>
                <value>
                    <fullName>Attente cotisations remboursement</fullName>
                </value>
                <value>
                    <fullName>Esperando documentos</fullName>
                </value>
                <value>
                    <fullName>Problemas con la deduccion</fullName>
                </value>
                <value>
                    <fullName>Inspeccion Hacienda</fullName>
                </value>
                <value>
                    <fullName>Esperando el cheque fiscal</fullName>
                </value>
                <value>
                    <fullName>Esperando respuesta de la administracion</fullName>
                </value>
                <value>
                    <fullName>Esperando el cobro de la ayuda</fullName>
                </value>
                <value>
                    <fullName>Problemas con la justificacion</fullName>
                </value>
                <value>
                    <fullName>Attente rectification de taux</fullName>
                </value>
                <value>
                    <fullName>Waiting for admin. document sending by GAC</fullName>
                </value>
                <value>
                    <fullName>Waiting for supporting documents sending by GAC</fullName>
                </value>
                <value>
                    <fullName>Waiting for submission by client</fullName>
                </value>
                <value>
                    <fullName>Waiting for IRAS Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for IRAS Payment</fullName>
                </value>
                <value>
                    <fullName>IRAS Audit</fullName>
                </value>
                <value>
                    <fullName>Dispute</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prestataire__c</fullName>
        <label>Prestataire</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forskel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prestataire_comptabilise_paye__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prestataire comptabilisé/payé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevision_HT_Prestataire__c</fullName>
        <label>Prévision HT Prestataire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Référence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIRET2__c</fullName>
        <description>CIF</description>
        <inlineHelpText>CIF</inlineHelpText>
        <label>CIF</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIRET__c</fullName>
        <formula>Contrat__r.Account.SIRET__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIRET</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solde__c</fullName>
        <formula>IF(NOT ISPICKVAL(Division,&apos;BRASIL&apos;), 
(Montant_TTC__c - ( ABS(v1_Montant_annule_par_avoir_TTC__c) +  Montant_encaisse_TTC__c + Montant_perdu__c)),(BR_CA_a_encaisser__c -  (Montant_encaisse_TTC__c +  Montant_annule_par_avoir2_TTC__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solde</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En attente</fullName>
                    <default>true</default>
                    <label>En attente</label>
                </value>
                <value>
                    <fullName>Validée</fullName>
                </value>
                <value>
                    <fullName>Envoyée</fullName>
                </value>
                <value>
                    <fullName>Soldée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_image__c</fullName>
        <formula>IMAGE(&apos;/resource/&apos; &amp; $Label.RessourceURLgraphicPack &amp; &apos;/GraphicsPack/16/fatcow/farmfresh/&apos; &amp; 
                     CASE(TEXT(Statut__c), 
                       &apos;Soldée&apos;, &apos;money_euro&apos;, 
                       &apos;Envoyée&apos;, &apos;mail_box&apos;, 
                       &apos;Validée&apos;, &apos;tick&apos;, 
                     &apos;time&apos;) &amp;
                     &apos;.png&apos;, &apos;&apos; ) &amp; CASE(Statut__c,&apos;En attente&apos;, &apos; (&apos;&amp; $Label.Statut_En_attente &amp;&apos;)&apos; , &quot;Validée&quot;,&apos; (&apos;&amp;$Label.Statut_Valid_e&amp;&apos;)&apos;,&apos;Envoyée&apos;,&apos; (&apos;&amp; $Label.Statut_Envoy_e &amp;&apos;)&apos;,
&apos;Soldée&apos;,&apos; (&apos;&amp; $Label.Statut_Sold_e &amp;&apos;)&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPS__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>taxe canadienne</description>
        <label>TPS</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TVA_Intracommunautaire__c</fullName>
        <label>TVA Intracommunautaire</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TVQ__c</fullName>
        <defaultValue>0.09975</defaultValue>
        <description>taxe canadienne</description>
        <label>TVQ</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_TVA__c</fullName>
        <defaultValue>0.20</defaultValue>
        <label>Taux TVA</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>&apos;Avoir&apos; ou &apos;Facture&apos;</description>
        <formula>IF(Montant_HT__c &lt; 0, &apos;Avoir&apos;, &apos;Facture&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Typologie_business__c</fullName>
        <label>Typologie business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>New biz</fullName>
                </value>
                <value>
                    <fullName>Regularisation</fullName>
                </value>
                <value>
                    <fullName>Refacturation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>